
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CERTF ;
 int KEYF ;
 int SSL_CTX_check_private_key (int ) ;
 int SSL_CTX_new (int ) ;
 scalar_t__ SSL_CTX_use_PrivateKey_file (int ,int ,int ) ;
 scalar_t__ SSL_CTX_use_certificate_file (int ,int ,int ) ;
 int SSL_FILETYPE_PEM ;
 int SSL_load_error_strings () ;
 int SSLeay_add_ssl_algorithms () ;
 int SSLv23_server_method () ;
 int ctx ;
 int exit (int) ;
 int meth ;

__attribute__((used)) static void ssl_init(void)
{
        SSL_load_error_strings();
        SSLeay_add_ssl_algorithms();
        meth = SSLv23_server_method();
        ctx = SSL_CTX_new (meth);
        if (!ctx)
                exit(1);
        if (SSL_CTX_use_certificate_file(ctx, CERTF,
                        SSL_FILETYPE_PEM) <= 0)
                exit(1);
        if (SSL_CTX_use_PrivateKey_file(ctx, KEYF,
                        SSL_FILETYPE_PEM) <= 0)
                exit(1);
        if (!SSL_CTX_check_private_key(ctx))
                exit(1);
}
