; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23481.c_ssl_init.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23481.c_ssl_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@meth = common dso_local global i32 0, align 4
@ctx = common dso_local global i32 0, align 4
@CERTF = common dso_local global i32 0, align 4
@SSL_FILETYPE_PEM = common dso_local global i32 0, align 4
@KEYF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ssl_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ssl_init() #0 {
  %1 = call i32 (...) @SSL_load_error_strings()
  %2 = call i32 (...) @SSLeay_add_ssl_algorithms()
  %3 = call i32 (...) @SSLv23_server_method()
  store i32 %3, i32* @meth, align 4
  %4 = load i32, i32* @meth, align 4
  %5 = call i32 @SSL_CTX_new(i32 %4)
  store i32 %5, i32* @ctx, align 4
  %6 = load i32, i32* @ctx, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %10, label %8

8:                                                ; preds = %0
  %9 = call i32 @exit(i32 1) #3
  unreachable

10:                                               ; preds = %0
  %11 = load i32, i32* @ctx, align 4
  %12 = load i32, i32* @CERTF, align 4
  %13 = load i32, i32* @SSL_FILETYPE_PEM, align 4
  %14 = call i64 @SSL_CTX_use_certificate_file(i32 %11, i32 %12, i32 %13)
  %15 = icmp sle i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %10
  %17 = call i32 @exit(i32 1) #3
  unreachable

18:                                               ; preds = %10
  %19 = load i32, i32* @ctx, align 4
  %20 = load i32, i32* @KEYF, align 4
  %21 = load i32, i32* @SSL_FILETYPE_PEM, align 4
  %22 = call i64 @SSL_CTX_use_PrivateKey_file(i32 %19, i32 %20, i32 %21)
  %23 = icmp sle i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %18
  %25 = call i32 @exit(i32 1) #3
  unreachable

26:                                               ; preds = %18
  %27 = load i32, i32* @ctx, align 4
  %28 = call i32 @SSL_CTX_check_private_key(i32 %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %32, label %30

30:                                               ; preds = %26
  %31 = call i32 @exit(i32 1) #3
  unreachable

32:                                               ; preds = %26
  ret void
}

declare dso_local i32 @SSL_load_error_strings(...) #1

declare dso_local i32 @SSLeay_add_ssl_algorithms(...) #1

declare dso_local i32 @SSLv23_server_method(...) #1

declare dso_local i32 @SSL_CTX_new(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @SSL_CTX_use_certificate_file(i32, i32, i32) #1

declare dso_local i64 @SSL_CTX_use_PrivateKey_file(i32, i32, i32) #1

declare dso_local i32 @SSL_CTX_check_private_key(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
